2004-03-27  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CodeCompletionDataProvider.cs: add refactorying of
	AddResolveResults.

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/*Provider.cs:
	* InsightWindow/*Provider.cs: update to reflect parser differences.

2004-03-26  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorView.xs: add DeleteLine for control + L and
	shift + delete, bug #55993

2004-03-26  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs:
	* CodeCompletion/CompletionWindow.cs: now, ctrl+space will autocomplete
	the entire thing if there is only one match.

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: setup completionWindow to be reused properly
	* CodeCompletion/CompletionWindow.cs: delay a bit before movement to
	attempt to fix correct placement issues. this goes from working
	properly 90% of the time to 99% of the time.

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs:
	* CodeCompletion/TextUtilities.cs:
	* CodeCompletion/CompletionWindow.cs:
	* CodeCompletion/ICompletionDataProvider.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs:
	* CodeCompletion/CodeCompletionDataProvider.cs:
	* CodeCompletion/TemplateCompletionDataProvider.cs:
		Lots of changes to allow for ctrl+space code completion
		activation. Most of the changes revolve around removing the
		assumption that the completion window is shown when the text
		insert mark is right after the triggering character.

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Properties/TextEditorProperties.cs: add a EnableCodeCompletion prop
	* Gui/SourceEditorDisplayBinding.cs:
	* Gui/SourceEditorView.cs: hookup EnabledCodeCompletion prop
	* Gui/OptionPanels/GeneralTextEditorProperties: sensify checkbox

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CompletionWindow.cs: fix bug that didnt allow you to
	enter shift+p or shift+n.

2004-03-25  Todd Berman  <tberman@sevenl.net>
