@@ -1,3 +1,8 @@
+2004-03-27  Todd berman  <tberman@sevenl.net>
+
+	* CodeCompletion/CodeCompletionDataProvider.cs: use the
+	ExpressionFinder if it exists.
+
 2004-03-27  Todd Berman  <tberman@sevenl.net>
 
 	* CodeCompletion/CodeCompletionDataProvider.cs: add refactorying of
